--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,88 @@
+*, ::before, ::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+}
+
 .container {
   height: 100vh;
-  background: url("../images/pattern-bg.svg");
+  border: 1px solid blue;
+  display: flex;
+  align-items: center;
+}
+.container .box-quote {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("../images/pattern-curve.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid green;
+  height: 100%;
+}
+.container .box-quote .text {
+  border: 1px solid salmon;
+  padding: 50px 0 50px 100px;
+  background-image: url("../images/pattern-quotes.svg");
+  background-repeat: no-repeat;
+  background-position: top;
+  height: 40%;
+  z-index: 3;
+  margin-right: -150px;
+  margin-left: 100px;
+}
+.container .box-quote .text p {
+  color: #202046;
+  font-weight: 300;
+  font-size: 28px;
+}
+.container .box-quote .text .by {
+  font-size: 18px;
+  margin-top: 30px;
+  font-weight: 500;
+}
+.container .box-quote .text .by span {
+  color: #babacf;
+}
+.container .box-photo {
+  width: 50%;
+  background-image: url("../images/pattern-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  height: 100%;
+  position: relative;
+}
+.container .box-photo img {
+  width: 70%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 3px;
+}
+.container .box-photo .box-button {
+  position: absolute;
+  bottom: 18%;
+  left: 25%;
+  border: 1px solid red;
+  padding: 10px 15px;
+  border-radius: 20px;
+  background: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.container .box-photo .box-button button {
+  border: none;
+  background: none;
+}
+.container .box-photo .box-button .prev {
+  margin-right: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
