--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,89 @@
+*, ::before, ::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Inter', sans-serif;
+}
+$dark-blue: hsl(240, 38%, 20%);
+$grayish-blue: hsl(240, 18%, 77%);
+
 .container{
     height: 100vh;
-    background: url('../images/pattern-bg.svg')
+    border: 1px solid blue;
+    display: flex;
+    align-items: center;
+    .box-quote{
+        width: 50%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        background-image: url('../images/pattern-curve.svg');
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: contain;
+        border: 1px solid green;
+        height: 100%;
+        .text{
+            border: 1px solid salmon;
+            padding: 50px 0 50px 100px;
+            background-image: url('../images/pattern-quotes.svg');
+            background-repeat: no-repeat;
+            background-position: top;
+            height: 40%;
+            z-index: 3;
+            margin-right: -150px;
+            margin-left: 100px;
+            p{
+                color: $dark-blue;
+                font-weight: 300;
+                font-size: 28px;
+            }
+            .by{
+                font-size: 18px;
+                margin-top: 30px;
+                font-weight: 500;
+                span {
+                    color: $grayish-blue;
+                }
+            }
+        }
+    }
+    .box-photo{
+        width: 50%;
+        background-image: url("../images/pattern-bg.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid red;
+        height: 100%;
+        position: relative;
+        
+        img{
+            width: 70%;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            border-radius: 3px;
+            
+        }
+        .box-button{
+            position: absolute;
+            bottom: 18%;
+            left: 25%;
+            border: 1px solid red;
+            padding: 10px 15px;
+            border-radius: 20px;
+            background: white;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            button{
+                border: none;
+                background: none;
+            }
+            .prev{
+                margin-right: 20px;
+            }
+        }
+    }
 }
