--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,22 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.container {
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
+}
+
+.slider {
   height: 100vh;
   border: 1px solid blue;
   display: flex;
   align-items: center;
 }
-.container .box-quote {
+.slider .box-quote {
   width: 50%;
   display: flex;
   align-items: center;
@@ -26,7 +35,7 @@ body {
   border: 1px solid green;
   height: 100%;
 }
-.container .box-quote .text {
+.slider .box-quote .text {
   border: 1px solid salmon;
   padding: 50px 0 50px 100px;
   background-image: url("../images/pattern-quotes.svg");
@@ -37,20 +46,20 @@ body {
   margin-right: -150px;
   margin-left: 100px;
 }
-.container .box-quote .text p {
+.slider .box-quote .text p {
   color: #202046;
   font-weight: 300;
   font-size: 28px;
 }
-.container .box-quote .text .by {
+.slider .box-quote .text .by {
   font-size: 18px;
   margin-top: 30px;
   font-weight: 500;
 }
-.container .box-quote .text .by span {
+.slider .box-quote .text .by span {
   color: #babacf;
 }
-.container .box-photo {
+.slider .box-photo {
   width: 50%;
   background-image: url("../images/pattern-bg.svg");
   background-repeat: no-repeat;
@@ -62,12 +71,12 @@ body {
   height: 100%;
   position: relative;
 }
-.container .box-photo img {
+.slider .box-photo img {
   width: 70%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 3px;
 }
-.container .box-photo .box-button {
+.slider .box-photo .box-button {
   position: absolute;
   bottom: 18%;
   left: 25%;
@@ -77,12 +86,16 @@ body {
   background: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.container .box-photo .box-button button {
+.slider .box-photo .box-button button {
   border: none;
   background: none;
 }
-.container .box-photo .box-button .prev {
+.slider .box-photo .box-button .prev {
   margin-right: 20px;
+}
+
+.hide {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
